force-app/main/default/objects/Patient__c.object
<CustomObject>
    <fields>
        <fullName>Covid_Test_Done__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Covid Test Done</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PName__c</fullName>
        <label>PName</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Patient_Phone__c</fullName>
        <label>Patient Phone</label>
        <required>true</required>
        <type>Phone</type>
    </fields>
    <label>Patient</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>PID-{00000}</displayFormat>
        <label>Patient Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Patients</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>